# ProtokollDB

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/services/: admin.rs  common.rs  display.rs  mod.rs  openidconnect.rs  user.rs
src/storage/: database.rs  index.rs  mod.rs
src/structs/: configuration.rs  get_inputs.rs  get_outputs.rs  mod.rs  post_inputs.rs  submitted_protocol.rs
