[package]
name = "protocoldb-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-web-httpauth = "0.8"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
sqlite = "0.33"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11", features = ["json"] }
jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
